k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: anloca
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
  type: ClusterIP
