k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: anloca
spec:
  selector:
    app: cart-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
