k8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: anloca
spec:
  selector:
    app: catalog-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
